[package]
authors = ["tracyspacy"]
name = "st7567_rs"
description = "ST7567 LCD driver with embedded-graphics support"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/tracyspacy/st7567_rs"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { package = "embedded-hal", version = "1.0" }
embedded-graphics-core = "0.4.0"


[profile.release]
debug = 2
